new commit 2:26, 17 june

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -610,7 +610,7 @@
               </div>
             </div>
             <div class=" works-options fnl-works-options">
-              <svg class="works-options-svg" width="144" height="140" fill="none">
+              <svg class="works-options-svg " width="144" height="140" fill="none">
                 <defs/>
                 <path stroke="#263238" stroke-miterlimit="10" d="M39 35l-15-4h-2l-2 9v2l15 4h2l3-9-1-2zM22 33l17 5M21 35l17 5"/>
                 <path stroke="#263238" stroke-miterlimit="10" d="M33 43a1 1 0 000 1 1 1 0 01-1 0 1 1 0 112-2 1 1 0 00-1 1z"/>
@@ -760,10 +760,23 @@
         </div>
         <!-- why choose us -->
         <div class="choose-us-container">
-          <svg class="ml-auto" width="438" height="438" fill="none">
+          <svg class="d-block ml-auto choose-us-svg`" width="438" height="438" fill="none">
             <defs/>
             <circle cx="219" cy="219" r="219" fill="#E6EDFE"/>
           </svg>
+          <div class="choose-us-options-container">
+            <div class="choose-us-options">
+                <div class="choose-us-options-text">
+                  Affordable Monthly Payments
+                </div>
+                <svg width="32" height="32" fill="none">
+                  <defs/>
+                  <path fill="#93D6FB" d="M24 13h8l-4-5-4 5zm0 6h8l-4 5-4-5z"/>
+                  <path fill="#0638B1" d="M1 0h8v32H1a1 1 0 01-1-1V1a1 1 0 011-1z"/>
+                  <path fill="#0F82C0" d="M12 0h8a1 1 0 011 1v30a1 1 0 01-1 1h-8V0z"/>
+                </svg>
+            </div>
+          </div>
         </div>
 
         <div>
