--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -759,13 +759,13 @@
           </div>
         </div>
         <!-- why choose us -->
-        <div class="choose-us-container">
-          <svg class="d-block ml-auto choose-us-svg`" width="438" height="438" fill="none">
-            <defs/>
-            <circle cx="219" cy="219" r="219" fill="#E6EDFE"/>
-          </svg>
-          <div class="choose-us-options-container">
+        <div class="choose-us-container">          
+          <div class="choose-us-options-container ">
+            <div class="choose-us-options-header">
+              Why Choose Us?
+            </div>
             <div class="choose-us-options">
+              <div class="choose-us-options-text-container">
                 <div class="choose-us-options-text">
                   Affordable Monthly Payments
                 </div>
@@ -775,8 +775,60 @@
                   <path fill="#0638B1" d="M1 0h8v32H1a1 1 0 01-1-1V1a1 1 0 011-1z"/>
                   <path fill="#0F82C0" d="M12 0h8a1 1 0 011 1v30a1 1 0 01-1 1h-8V0z"/>
                 </svg>
+              </div>
+              <div class="choose-us-options-text-container">
+                <div class="choose-us-options-text">
+                  Best Hospitals <br/> near you
+                </div>
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.33325 0.333496H29.6666L25.6666 8.3335H0.333252L4.33325 0.333496Z" fill="#0638B1"/>
+                  <path d="M4.33325 11H29.6666L25.6666 19H0.333252L4.33325 11Z" fill="#0F82C0"/>
+                  <path d="M4.33325 21.667H29.6666L25.6666 29.667H0.333252L4.33325 21.667Z" fill="#93D6FB"/>
+                </svg>                  
+              </div>
+              <div class="choose-us-options-text-container">
+                <div class="choose-us-options-text">
+                  Consult With Qualified Doctors
+                </div>
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.6666 7.00016V1.66683C29.6666 1.31321 29.5261 0.974068 29.2761 0.724019C29.026 0.473971 28.6869 0.333496 28.3333 0.333496H1.66659C1.31296 0.333496 0.973824 0.473971 0.723775 0.724019C0.473727 0.974068 0.333252 1.31321 0.333252 1.66683V7.00016H29.6666Z" fill="#0F82C0"/>
+                  <path d="M0.333252 9.66699V28.3337C0.333252 28.6873 0.473727 29.0264 0.723775 29.2765C0.973824 29.5265 1.31296 29.667 1.66659 29.667H8.33325V9.66699H0.333252Z" fill="#93D6FB"/>
+                  <path d="M11 29.667H28.3333C28.687 29.667 29.0261 29.5265 29.2761 29.2765C29.5262 29.0264 29.6667 28.6873 29.6667 28.3337V9.66699H11V29.667Z" fill="#0638B1"/>
+                </svg>                                                      
+              </div>
+              <div class="choose-us-options-text-container">
+                <div class="choose-us-options-text">
+                  No Long Forms, Instant Access
+                </div>
+                <svg width="28" height="32" viewBox="0 0 28 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M26.0001 31.9998H14.0001C13.6465 31.9998 13.3073 31.8594 13.0573 31.6093C12.8072 31.3593 12.6667 31.0201 12.6667 30.6665V27.9998C12.6667 27.6462 12.8072 27.3071 13.0573 27.057C13.3073 26.807 13.6465 26.6665 14.0001 26.6665H26.0001C26.3537 26.6665 26.6928 26.807 26.9429 27.057C27.1929 27.3071 27.3334 27.6462 27.3334 27.9998V30.6665C27.3334 31.0201 27.1929 31.3593 26.9429 31.6093C26.6928 31.8594 26.3537 31.9998 26.0001 31.9998Z" fill="#93D6FB"/>
+                  <path d="M26.0001 0H2.00008C1.64646 0 1.30732 0.140475 1.05727 0.390523C0.807223 0.640572 0.666748 0.979711 0.666748 1.33333V4C0.666748 4.35362 0.807223 4.69276 1.05727 4.94281C1.30732 5.19286 1.64646 5.33333 2.00008 5.33333H26.0001C26.3537 5.33333 26.6928 5.19286 26.9429 4.94281C27.1929 4.69276 27.3334 4.35362 27.3334 4V1.33333C27.3334 0.979711 27.1929 0.640572 26.9429 0.390523C26.6928 0.140475 26.3537 0 26.0001 0Z" fill="#0F82C0"/>
+                  <path d="M26.0001 8H2.00008C1.64646 8 1.30732 8.14047 1.05727 8.39052C0.807223 8.64057 0.666748 8.97971 0.666748 9.33333V22.6667C0.666748 23.0203 0.807223 23.3594 1.05727 23.6095C1.30732 23.8595 1.64646 24 2.00008 24H26.0001C26.3537 24 26.6928 23.8595 26.9429 23.6095C27.1929 23.3594 27.3334 23.0203 27.3334 22.6667V9.33333C27.3334 8.97971 27.1929 8.64057 26.9429 8.39052C26.6928 8.14047 26.3537 8 26.0001 8Z" fill="#0638B1"/>
+                </svg>                  
+              </div>
             </div>
           </div>
+          <svg class="d-block ml-auto choose-us-svg`" width="438" height="438" fill="none">
+            <defs/>
+            <circle cx="219" cy="219" r="219" fill="#E6EDFE"/>
+          </svg>
+        </div>
+        <div class="explore-plans-container">
+          <div class="explore-container ">
+            <div class="explore-text fw-700 text-center">
+              Explore Our Caring & PremiumMedical <br/> HealthPlans & Services
+            </div>
+            <div class="explore-btn-container text-center">
+              <div class="pay-ayg-btn btn">
+                Pay as you go Service
+              </div>
+              <div class="capitation-btn btn">
+                Capitation Service
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
         <div>
