--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -808,17 +808,18 @@
               </div>
             </div>
           </div>
-          <svg class="d-block ml-auto choose-us-svg`" width="438" height="438" fill="none">
+          <svg class="d-block ml-auto choose-us-svg" width="438" height="438" fill="none">
             <defs/>
             <circle cx="219" cy="219" r="219" fill="#E6EDFE"/>
           </svg>
         </div>
+        <!-- explore plans -->
         <div class="explore-plans-container">
           <div class="explore-container ">
             <div class="explore-text fw-700 text-center">
               Explore Our Caring & PremiumMedical <br/> HealthPlans & Services
             </div>
-            <div class="explore-btn-container text-center">
+            <div class="explore-btn-container d-flex justify-content-center">
               <div class="pay-ayg-btn btn">
                 Pay as you go Service
               </div>
@@ -828,16 +829,281 @@
             </div>
 
           </div>
+          <div class="payg-container">
+            <div class="payg-content">
+              <div class="payg-header w-90 fw-700">
+                EASYDOC247 Pay As You Go (EDPAUG)
+              </div>
+              <div class="payg-text">
+                Become a Pay as you go client on EASYDOC247. Only Pay for immediate medical service to be rendered. Billing is done on an individual basis according to medical service offered.
+              </div>
+              <div class="payg-benefits-header">
+                <div class="payg-benefits">
+                  Best hospitals near you
+                </div>
+                <div class="payg-benefits">
+                  Consult with qualified doctors
+                </div>
+                <div class="payg-benefits">
+                  Awesome customer care
+                </div>
+                <div class="payg-benefits">
+                  No long forms, Instant access
+                </div>
+              </div>
+              <div class="payg-get-started-btn fw-700 btn">
+                GET STARTED
+              </div>
+            </div>
+            <div class="payg-img-container">
+              <img class="w-100 h-100" src="assets/payg-img.png" alt="">
+            </div>
+          </div>
+        </div>
+        <!-- price plans -->
+        <div class="price-plans-container">
+          <div class="price-plans-header">
+            Capitation Price Plans
+          </div>
+          <div class="subscriptions-container">
+            <div class="subscriptions-package">
+              <div class="package-header text-center">
+                <div class="package-level">
+                  BRONZE
+                </div>
+                <div class="package-amount">
+                  ₦1,000.00
+                </div>
+              </div>
+              <div class="package-content text-center">
+                <div class="package-benefits-container">
+                  <div class="package-benefits">
+                    Investigations
+                  </div>
+                  <div class="package-benefits">
+                    Care Solutions
+                  </div>
+                  <div class="package-benefits">
+                    Doctor Treatment
+                  </div>
+                  <div class="package-benefits">
+                    Medical Specialties
+                  </div>
+                </div>
+                <div class="buy-package-btn">
+                    BUY
+                </div>
+              </div>
+
+            </div>
+            <div class="subscriptions-package">
+              <div class="package-header text-center">
+                <div class="package-level">
+                  SILVER
+                </div>
+                <div class="package-amount">
+                  ₦3,000.00
+                </div>
+              </div>
+              <div class="package-content text-center">
+                <div class="package-benefits-container">
+                  <div class="package-benefits">
+                    Investigations
+                  </div>
+                  <div class="package-benefits">
+                    Care Solutions
+                  </div>
+                  <div class="package-benefits">
+                    Doctor Treatment
+                  </div>
+                  <div class="package-benefits">
+                    Medical Specialties
+                  </div>
+                </div>
+                <div class="buy-package-btn">
+                    BUY
+                </div>
+              </div>
+
+            </div>
+            <div class="subscriptions-package">
+              <div class="package-header text-center">
+                <div class="package-level">
+                  GOLD
+                </div>
+                <div class="package-amount">
+                  ₦5,000.00
+                </div>
+              </div>
+              <div class="package-content text-center">
+                <div class="package-benefits-container">
+                  <div class="package-benefits">
+                    Investigations
+                  </div>
+                  <div class="package-benefits">
+                    Care Solutions
+                  </div>
+                  <div class="package-benefits">
+                    Doctor Treatment
+                  </div>
+                  <div class="package-benefits">
+                    Medical Specialties
+                  </div>
+                </div>
+                <div class="buy-package-btn">
+                    BUY
+                </div>
+              </div>
+
+            </div>
+            <div class="subscriptions-package">
+              <div class="package-header text-center">
+                <div class="package-level">
+                  DIAMOND
+                </div>
+                <div class="package-amount">
+                  ₦10,000.00
+                </div>
+              </div>
+              <div class="package-content text-center">
+                <div class="package-benefits-container">
+                  <div class="package-benefits">
+                    Investigations
+                  </div>
+                  <div class="package-benefits">
+                    Care Solutions
+                  </div>
+                  <div class="package-benefits">
+                    Doctor Treatment
+                  </div>
+                  <div class="package-benefits">
+                    Medical Specialties
+                  </div>
+                </div>
+                <div class="buy-package-btn">
+                    BUY
+                </div>
+              </div>
+
+            </div>
+          </div>
 
         </div>
-
-        <div>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia libero qui blanditiis, alias eaque aspernatur deleniti ducimus aliquid numquam modi culpa commodi praesentium tenetur? Officiis distinctio sapiente ratione veritatis perspiciatis nisi facilis magni ipsa amet illum reprehenderit aliquid, sed exercitationem eius suscipit doloremque quisquam aliquam! Corporis, amet minus ad explicabo magnam delectus aliquid repellendus distinctio fugiat consequuntur. Sit iusto labore obcaecati velit magnam mollitia? Ipsa natus deserunt perferendis nisi praesentium nobis sint ullam, molestias porro distinctio unde ab obcaecati voluptatum deleniti officia veritatis. Tempora illo rerum aliquid eaque itaque non libero esse repellendus. Perferendis eaque ratione praesentium repellat! A ducimus distinctio sapiente nisi voluptatem qui! Soluta officia mollitia error nesciunt quam porro hic ipsam est optio fuga quidem esse repudiandae, quae eum omnis enim tempora reprehenderit magnam. Quaerat odit perferendis, fuga ea accusantium consequuntur earum repellendus reiciendis enim? Autem esse perspiciatis vel tempore eligendi iure, nulla recusandae accusamus obcaecati omnis quidem iusto, nostrum dolorem? Eum obcaecati recusandae nam animi, sit expedita deserunt quia, blanditiis perferendis officiis voluptas laudantium adipisci consequuntur magnam natus doloremque inventore nemo mollitia vel quos perspiciatis aperiam! Expedita asperiores perspiciatis nesciunt aliquid nisi animi suscipit similique excepturi, beatae at vel tempora iure reprehenderit labore, mollitia architecto molestias nam ipsa esse iusto! Architecto eum impedit sapiente quia! Esse nemo enim, impedit odio optio id voluptas accusamus qui expedita doloremque atque quam veniam necessitatibus ipsam quaerat dignissimos reprehenderit vero beatae dolores sit ex quae! Quam laudantium quisquam dolor, ipsum et facere sunt! Iusto, exercitationem ut. Quod vero est cupiditate laboriosam delectus obcaecati velit, fugiat quas soluta hic veniam nam? Ducimus iusto, pariatur, aliquam sit molestiae facere ex rem consequatur perferendis dolorem saepe. Laboriosam qui sint amet atque odit harum minima aliquid cumque ratione! Nulla consequatur recusandae cumque. Eveniet nulla nisi dolorum minima, iste, nostrum nam excepturi tempora numquam accusamus sapiente quam ipsam ad quo aperiam, neque illo aut provident expedita? Sed illo ab magnam laudantium sapiente veritatis est maiores earum molestiae dolorem quas, repellat cum provident blanditiis voluptas culpa eveniet voluptatibus quos, in libero ipsa debitis quo! Minima placeat iste eveniet alias, temporibus nemo cupiditate quisquam, eum ad magnam aspernatur explicabo necessitatibus nisi veniam provident et numquam! Commodi cupiditate magnam debitis, soluta exercitationem ex obcaecati iure saepe quidem natus accusantium consectetur iste iusto deleniti totam impedit quasi quis quas? Vitae, sapiente. Dolor recusandae nam saepe, reiciendis quaerat repellendus temporibus sint assumenda sed amet, exercitationem, culpa eius optio quidem? Saepe fuga eveniet quaerat accusamus delectus, nobis quae doloribus neque, dolorum iusto consequuntur repellendus harum architecto doloremque animi officiis velit, ullam dignissimos explicabo illo eum reprehenderit molestiae excepturi! Sapiente voluptate voluptas doloribus dolorem molestias esse aperiam maxime quam aspernatur illum reprehenderit deserunt eveniet ratione harum hic corrupti animi, minima commodi doloremque nulla incidunt et alias? Iste tempore impedit cum tenetur placeat incidunt. Voluptatibus tempora dolores, hic natus nulla iure repellendus ratione maxime, esse veritatis molestias! Provident deserunt in debitis veniam consequuntur quam ratione dolorem. Maxime sint blanditiis praesentium illo iste. Tenetur sit blanditiis aliquid dolore fugiat? Molestias culpa quisquam aliquam veritatis.
+        <!-- set appointment -->
+        <div class="set-appointment-container">
+          <div class="set-appointment ">
+            <div class="appointment-header d-flex fw-400">
+              <div class="book-an-appointment-btn">
+                Book an Appointment
+              </div>
+              <div class="find-a-hospital-btn">
+                Find a Hospital
+              </div>
+              <div class="find-a-clinic-btn">
+                Find a Clinic
+              </div>
+            </div>
+            <div class="appointment-content d-flex justify-content-between">
+              <div class="specialist-dropdown ">
+                Specialist
+              </div>
+              <div class="set-schedule-dropdown ">
+                Set Schedule
+              </div>
+              <div class="search-appointment-btn">
+                SEARCH
+              </div>
+            </div>
+          </div>
+          <svg class="set-appointment-svg" width="358" height="358" fill="none">
+            <defs/>
+            <circle cx="179" cy="179" r="179" fill="#E6EDFE"/>
+          </svg>
         </div>
-      
+        <!-- register as a practitioner -->
+        <div class="practitioner-register-container">
+          <div class="practitioner-register w-90 mx-auto fw-700">
+            <div class="register-header">
+              Are You a Medical Practitioner?
+            </div>
+            <div class="register-text w-90 mx-auto">
+              Connect virtually with your patients and attract new patients while deliverying a premium experiencce experience to your patients
+            </div>
+            <div class="practitioner-register-btn btn fw-700">
+              REGISTER
+            </div>
+          </div>
+        </div>
+        <!-- footer section -->
+        <div class="footer">
+          <div class="footer-content">
+            <div class="footer-logo-container ">
+              <img class="w-100 h-100" src="assets/footer-logo.png" alt="">
+            </div>
+            <div class="health-care-links">
+              <div class="links-header">
+                Health Care Plans
+              </div>
+              <div class="footer-links">
+                Pay As You Go
+              </div>
+              <div class="footer-links">
+                Capitation
+              </div> 
+            </div>
+            <div class="quick-links">
+              <div class="links-header">
+                Quick Links
+              </div>
+              <div class="footer-links">
+                Home
+              </div>
+              <div class="footer-links">
+                About
+              </div>
+              <div class="footer-links">
+                Services
+              </div>
+              <div class="footer-links">
+                Pricing
+              </div>
+              <div class="footer-links">
+                Contact
+              </div>
+            </div>
+            <div class="reach-us-links">
+              <div class="links-header">
+                Reach us
+              </div>
+              <div class="footer-links d-flex align-items-center">
+                <svg class="mr-3" width="20" height="18" fill="none">
+                  <defs/>
+                  <path fill="#333" fill-rule="evenodd" d="M15 0a5 5 0 015 5v8c0 3-2 5-5 5H5c-3 0-5-2-5-5V5c0-3 2-5 5-5h10zm2 7V6 5h-1l-5 4H9L5 5H4L3 6l1 1 4 3a3 3 0 004 0l5-3z" clip-rule="evenodd"/>
+                </svg>
+                hello@easydoc24/7.co
+              </div>
+              <div class="footer-links d-flex align-items-center">
+                <svg class="mr-3" width="14" height="20" fill="none">
+                  <defs/>
+                  <path fill="#333" fill-rule="evenodd" d="M0 9V7 6c0-4 2-6 5-6h4c3 0 5 2 5 6a221 221 0 010 8c0 4-2 6-5 6H5c-3 0-5-2-5-6V9zm8 9l-1 1-1-1 1-2 1 2zM2 6v5c0 2 2 4 4 4h2c2 0 4-2 4-4a131 131 0 000-5c0-2-2-4-4-4H6C4 2 2 4 2 6z" clip-rule="evenodd"/>
+                </svg>
+                +234 9018457614
+              </div>
+              <div class="footer-links d-flex align-items-center">
+              <svg class="mr-3" width="18" height="20" fill="none">
+                <defs/>
+                <path fill="#333" fill-rule="evenodd" d="M9 0l6 2 3 6v1l-4 8-4 3H8l-5-5c-2-2-2-4-2-7 0-4 3-8 8-8zm0 11a3 3 0 003-2c0-2-1-3-3-3-1 0-3 1-3 3l3 2z" clip-rule="evenodd"/>
+              </svg>
+              Plot 3 Block 19, Jerry Iriabe Street, <br/> Lekki Phase 1, Lagos, Nigeria
+            </div>
+          </div>
+          </div>
+          <div class="copyright-text text-center">
+            © 2021 Easydoc24/7. All rights reserved
+          </div>
+        </div>     
+      </div>
     </div>
-    
-
     <!-- end of content -->
     <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
