--- a/patient admin/appointment/appointment.html
+++ b/patient admin/appointment/appointment.html
@@ -188,85 +188,24 @@
       <!-- main content -->
       <div class="main-content-container">
         <div class="main-content d-flex">
-          <!-- avaliable doctors section -->
-          <div class="avaliable-doctors-section">
-            <div class="avaliable-doctors-container w-100 h-100">
-              <div class="avaliable-doctors_top p-5">
-                <div class="avaliable-doctors-header mb-3">
-                  Available Doctors
+          <!-- appointment doctors section -->
+          <div class="appointment-doctors-section">
+            <div class="appointment-doctors-container w-100 h-100">
+              <div class="appointment-doctors_top p-5">
+                <div class="appointment-doctors-header mb-3">Appointment</div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="appointment-date">Today</div>
+                  <div class="view-all-btn custom-btn">view btn</div>
                 </div>
-                <input type="text" />
               </div>
-              <div class="avaliable-doctors_list-container">
-                <div class="avaliable-doctors_list">
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
+              <div class="appointment-doctors_list-container">
+                <div class="appointment-doctors_list">
+                  <div class="appointment-doctors d-flex p-3 mb-2">
                     <div class="doctors-profile-img"></div>
                     <div class="doctors-info">
                       <div class="name">Dr. Mabel Quins</div>
                       <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
+                      <div class="appointment-time">9:30 am - 10:30 am</div>
                     </div>
                   </div>
                 </div>
@@ -274,10 +213,84 @@
             </div>
           </div>
           <!-- view profile section -->
-          <div class="view-profile-section"></div>
+          <div class="view-profile-section d-flex p-5">
+            <div class="go-back-btn custom-btn position-fixed">go back</div>
+            <div class="profile_about-me-container mt-5 mr-5">
+              <div class="profile-container mb-5 p-3">
+                <div class="d-flex mb-3">
+                  <div class="doctors-profile-img"></div>
+                  <div class="doctors-info">
+                    <div class="name">Dr. Mabel Quins</div>
+                    <div class="profession-field">Dentist</div>
+                  </div>
+                </div>
+              </div>
+              <div class="consultancy-container p-3">
+                <div
+                  class="
+                    consultancy-header
+                    d-flex
+                    justify-content-between
+                    align-items-center
+                    mb-3
+                  "
+                >
+                  Consultancy Fee
+                  <div class="more-btn">more</div>
+                </div>
+                <div class="consultancy-text">N 1200 per session</div>
+                <div class="duration-header mb-3">Duration</div>
+                <div class="duration-time">1 hour</div>
+                <div class="schedule-header mb-3">Schedule</div>
+                <div class="schedule-duration mb-3">
+                  <div class="schedule-date">Monday - Tuesday</div>
+                  <div class="schedule-time">12pm - 4pm</div>
+                </div>
+                <div class="schedule-duration mb-3">
+                  <div class="schedule-date">Monday - Tuesday</div>
+                  <div class="schedule-time">12pm - 4pm</div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="consultancy_qualifications-container mt-5"> -->
+            <div class="added-conditions-container mt-5 p-5">
+              <div class="condtions-container mb-4">
+                <div
+                  class="conditions-header d-flex justify-content-between mb-3"
+                >
+                  condition
+                  <div class="more-btn">more</div>
+                </div>
+                <div class="conditions-text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </div>
+              </div>
+              <div class="symptoms-container mb-4">
+                <div class="conditions-header mb-3">symptoms</div>
+                <div class="symptoms-text">
+                  <div class="symptoms-list d-flex align-items-center">
+                    <span class="list-dot mr-3">&#8226;</span>
+                    <div>Increased hunger</div>
+                  </div>
+                </div>
+              </div>
+              <div class="allergies-container mb-4">
+                <div class="conditions-header mb-3">allergies</div>
+                <div class="conditions-text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </div>
+              </div>
+            </div>
+            <!-- </div> -->
+          </div>
         </div>
       </div>
     </div>
+
     <!-- </div> -->
     <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
