building doctors admin 12th july

--- a/doctors admin/dashboard/dashboard.html
+++ b/doctors admin/dashboard/dashboard.html
@@ -240,23 +240,25 @@
                 </div>
               </div>
             </div>
-            <!-- upcoming appointmentts -->
-            <div class="upcoming-appointments-container p-5 grey-background">
-              <div
+            <!-- appointment-balance-container -->
+            <div class="appointment-balance-container w-30">
+              <!-- upcoming appointments -->
+              <div class="upcoming-appointments-container mb-5 p-5 grey-background">
+                <div
                 class="
-                  header-container
-                  d-flex
-                  align-items-center
-                  justify-content-between
-                  mb-5
+                header-container
+                d-flex
+                align-items-center
+                justify-content-between
+                mb-5
                 "
-              >
+                >
                 <div class="upcoming-appointments-header">
                   Upcoming Appointments
                 </div>
                 <div class="view-all-btn">view all</div>
               </div>
-
+              
               <div class="upcoming-appointments">
                 <div class="appointments">
                   <div class="appointments_date mb-3">Today</div>
@@ -270,9 +272,31 @@
                   </div>
                 </div>
               </div>
+              </div>
+              <!-- avaliable balance -->
+              <div class="avaliable-balance-container p-5">
+                <div
+                class="
+                d-flex
+                align-items-center
+                justify-content-between
+                mb-5
+                "
+                >
+                <div class="avaliable-balance-header">
+                  AVAILABLE  BALANCE
+                </div>
+                <div class="">svg</div>
+              </div>
+              <div class="avaliable-balance">
+                12,000.29 NGN
+              </div>
+              
+              </div>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
     <!-- </div> -->
