doctors admin, appointment tab

--- a/doctors admin/appointment/bookings.html
+++ b/doctors admin/appointment/bookings.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../patientadmin.css" />
+    <link rel="stylesheet" href="../../patient admin/patientadmin.css" />
   </head>
   <body>
     <!-- <div class="patient-admin-wrapper"> -->
@@ -188,161 +188,110 @@
       <!-- main content -->
       <div class="main-content-container">
         <div class="main-content d-flex">
-          <!-- avaliable doctors section -->
-          <div class="messages-doctors-section">
-            <div class="avaliable-doctors-container w-100 h-100">
-              <div class="avaliable-doctors_top p-5">
-                <div class="avaliable-doctors-header mb-3">Doctors</div>
-                <input type="text" />
+          <!-- appointment doctors section -->
+          <div class="appointment-doctors-section">
+            <div class="appointment-doctors-container w-100 h-100">
+              <div class="appointment-doctors_top p-5">
+                <div class="appointment-doctors-header mb-3">Bookings</div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="appointment-date">Today</div>
+                  <div class="view-all-btn custom-btn">view btn</div>
+                </div>
               </div>
-              <div class="avaliable-doctors_list-container">
-                <div class="avaliable-doctors_list">
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
+              <div class="appointment-doctors_list-container">
+                <div class="appointment-doctors_list">
+                  <div class="appointment-doctors d-flex p-3 mb-2">
                     <div class="doctors-profile-img"></div>
                     <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
+                      <div class="name">Mabel Quins</div>
+                      <div class="appointment-purpose">Check up</div>
+                      <div class="appointment-time">9:30 am - 10:30 am</div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <!-- message-tab section -->
-          <div class="message-tab-section">
-            <div
-              class="
-                message-tab-menu
-                d-flex
-                justify-content-between
-                align-items-center
-                p-3
-              "
-            >
-              <div class="tab-menu-profile d-flex align-items-center">
-                <div class="recievers-profile-img"></div>
-                <div class="recievers-info">
-                  <div class="name">Dr. Mabel Quins</div>
-                  <div class="active-status">Online</div>
-                </div>
-              </div>
-              <div class="tab-menu-options d-flex">
-                <a href="video-call.html"
-                  ><div class="video-call-btn mr-3">video-call</div></a
-                >
-                <a href="voice-call.html"
-                  ><div class="voice-call-btn mr-3">voice-call</div></a
-                >
-                <div class="more-btn">more-btn</div>
-              </div>
-            </div>
-            <div class="message-tab-container">
-              <div class="message-tab p-4 justify-content-between">
-                <div class="chat-convo">
-                  <div class="recievers-chats-container w-48 mr-auto">
-                    <div class="recievers-chats br-3 p-4 mb-1">
-                      Lorem Ipsun est sit aliqua dolor
-                    </div>
-                    <div class="message-delivered-time text-right">6:20pm</div>
-                  </div>
-                  <div class="senders-chats-container w-48 ml-auto">
-                    <div class="senders-chats br-3 p-4 mb-1">
-                      Lorem Ipsun est sit aliqua dolor
-                    </div>
-                    <div class="message-delivered-time">6:20pm</div>
+          <!-- view profile section -->
+          <div class="view-profile-section d-flex p-5">
+            <div class="go-back-btn custom-btn position-fixed">go back</div>
+            <div class="profile_about-me-container mt-5 mr-5">
+              <div class="profile-container mb-5 p-3">
+                <div class="d-flex mb-3">
+                  <div class="patients-profile-img"></div>
+                  <div class="patients-info">
+                    <div class="name">Mabel Quins</div>
+                    <div class="appointment-purpose">Check up</div>
                   </div>
                 </div>
               </div>
-              <div
-                class="
-                  compose-message-container
-                  d-flex
-                  align-items-center
-                  justify-content-center
-                "
-              >
+              <div class="consultancy-container p-3">
                 <div
                   class="
-                    compose-message
+                    consultancy-header
                     d-flex
                     justify-content-between
                     align-items-center
-                    w-80
+                    mb-3
                   "
                 >
-                  <div class="emoji-btn">EM</div>
-                  <div class="add-attachment-btn">ATT</div>
-                  <input
-                    type="text"
-                    class="type-message border-none h-100 br-3 p-3"
-                  />
-                  <div class="send-message-btn">SND</div>
+                  Consultancy Fee
+                  <div class="more-btn">more</div>
+                </div>
+                <div class="consultancy-text">N 1200 per session</div>
+                <div class="duration-header mb-3">Duration</div>
+                <div class="duration-time">1 hour</div>
+                <div class="schedule-header mb-3">Schedule</div>
+                <div class="schedule-duration mb-3">
+                  <div class="schedule-date">Monday - Tuesday</div>
+                  <div class="schedule-time">12pm - 4pm</div>
+                </div>
+                <div class="schedule-duration mb-3">
+                  <div class="schedule-date">Monday - Tuesday</div>
+                  <div class="schedule-time">12pm - 4pm</div>
+                </div>
+              </div>
+              <div class="more-option-btn d-flex align-items-center mt-5">
+                <div class="cancel-bookings custom-btn">cancel</div>
+                <div class="pending-bookings custom-btn">pending</div>
+                <div class="approve-bookings custom-btn">approve</div>
+              </div>
+            </div>
+
+            <!-- <div class="consultancy_qualifications-container mt-5"> -->
+            <div class="added-conditions-container mt-5 p-5">
+              <div class="condtions-container mb-4">
+                <div
+                  class="conditions-header d-flex justify-content-between mb-3"
+                >
+                  condition
+                  <div class="more-btn">more</div>
+                </div>
+                <div class="conditions-text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </div>
+              </div>
+              <div class="symptoms-container mb-4">
+                <div class="conditions-header mb-3">symptoms</div>
+                <div class="symptoms-text">
+                  <div class="symptoms-list d-flex align-items-center">
+                    <span class="list-dot mr-3">&#8226;</span>
+                    <div>Increased hunger</div>
+                  </div>
+                </div>
+              </div>
+              <div class="allergies-container mb-4">
+                <div class="conditions-header mb-3">allergies</div>
+                <div class="conditions-text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
                 </div>
               </div>
             </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
