--- a/doctors admin/messages/voice-call.html
+++ b/doctors admin/messages/voice-call.html
@@ -9,12 +9,12 @@
       rel="stylesheet"
       href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../../patient admin/patientadmin.css" />
+    <link rel="stylesheet" href="../patientadmin.css" />
   </head>
   <body>
-    <div class="video-call-container">
-      <div class="recievers-video"></div>
-      <div class="senders-video"></div>
+    <div class="voice-call-container">
+      <div class="recievers-img"></div>
+      <div class="recievers-name">Dr. Robert Fox</div>
       <div class="end-call-container text-center">
         <div class="end-call-btn mb-3">end btn</div>
         <div class="call-duration">45:23:07</div>
