--- a/doctors admin/messages/messages.html
+++ b/doctors admin/messages/messages.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../patientadmin.css" />
+    <link rel="stylesheet" href="../../patient admin/patientadmin.css" />
   </head>
   <body>
     <!-- <div class="patient-admin-wrapper"> -->
@@ -188,83 +188,24 @@
       <!-- main content -->
       <div class="main-content-container">
         <div class="main-content d-flex">
-          <!-- avaliable doctors section -->
-          <div class="messages-doctors-section">
-            <div class="avaliable-doctors-container w-100 h-100">
-              <div class="avaliable-doctors_top p-5">
-                <div class="avaliable-doctors-header mb-3">Doctors</div>
+          <!-- doctors-patients-section -->
+          <div class="doctors-patients-section">
+            <div class="doctors-patients-container w-100 h-100">
+              <div class="doctors-patients_top p-5">
+                <div class="doctors-patients-header mb-3">My Patients</div>
                 <input type="text" />
               </div>
-              <div class="avaliable-doctors_list-container">
-                <div class="avaliable-doctors_list">
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
-                    </div>
-                  </div>
-                  <div class="avaliable-doctors d-flex p-3 mb-2">
-                    <div class="doctors-profile-img"></div>
-                    <div class="doctors-info">
-                      <div class="name">Dr. Mabel Quins</div>
-                      <div class="profession-field">Dentist</div>
+              <div class="patients-list-container">
+                <div class="patients-list">
+                  <div class="patients d-flex">
+                    <div class="patients-profile-img"></div>
+                    <div class="patients-info">
+                      <div class="doctors-info mb-4">
+                        <div class="name">Mabel Quins</div>
+                        <div class="blood-group">AB-</div>
+                        <div class="age">30</div>
+                        <div class="gender">female</div>
+                      </div>
                     </div>
                   </div>
                 </div>
