--- a/doctors admin/messages/video-call.html
+++ b/doctors admin/messages/video-call.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../../patient admin/patientadmin.css" />
+    <link rel="stylesheet" href="../patientadmin.css" />
   </head>
   <body>
     <div class="video-call-container">
