--- a/doctors admin/profile/patients-details.html
+++ b/doctors admin/profile/patients-details.html
@@ -187,11 +187,11 @@
       <!-- main content -->
       <div class="main-content-container">
         <div class="main-content d-flex">
-          <!-- avaliable doctors section -->
-          <div class="messages-doctors-section">
-            <div class="avaliable-doctors-container w-100 h-100">
-              <div class="avaliable-doctors_top p-5">
-                <div class="avaliable-doctors-header mb-3">Doctors</div>
+          <!-- doctors-patients-section -->
+          <div class="doctors-patients-section">
+            <div class="doctors-patients-container w-100 h-100">
+              <div class="doctors-patients_top p-5">
+                <div class="doctors-patients-header mb-3">My Patients</div>
                 <input type="text" />
               </div>
               <div class="patients-list-container">
@@ -211,76 +211,143 @@
               </div>
             </div>
           </div>
-          <!-- message-tab section -->
-          <div class="message-tab-section">
-            <div
-              class="
-                message-tab-menu
-                d-flex
-                justify-content-between
-                align-items-center
-                p-3
-              "
-            >
-              <div class="tab-menu-profile d-flex align-items-center">
-                <div class="doctors-profile-img"></div>
-                <div class="doctors-info">
-                  <div class="name">Dr. Mabel Quins</div>
-                  <div class="active-status">Online</div>
+          <!-- patients-details-section -->
+          <div class="patients-details-section">
+            <div class="patients-profile-container w-70">
+              <div class="profile-container p-5 w-100 d-flex mb-4">
+                <div class="profile-img-container w-40 p-5">
+                  <div class="patients-profile-img"></div>
+                  <div class="patients-info">
+                    <div class="name">Jacob Jones</div>
+                    <div class="d-flex">
+                      <div class="sex-container">
+                        <div class="sex-head">sex</div>
+                        <div class="sex">Male</div>
+                      </div>
+                      <div class="age-container">
+                        <div class="age-head">age</div>
+                        <div class="age">30</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="personal-info w-60 p-5">
+                  <div class="d-flex justify-content-between mb-4">
+                    <div class="personal-info-header">Personal Info</div>
+                    <svg
+                      width="24"
+                      height="24"
+                      fill="none"
+                      class="custom-btn"
+                      data-toggle="modal"
+                      data-target="#personal-info-modal"
+                    >
+                      <defs />
+                      <path
+                        stroke="#2B2B2B"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
+                      />
+                    </svg>
+                  </div>
+                  <div class="d-flex justify-content-between mb-4">
+                    <div class="height-container d-flex">
+                      <div class="height-head mr-4">Height</div>
+                      <div class="height">143 cm</div>
+                    </div>
+                    <div class="marital-status-container d-flex">
+                      <div class="marital-status-head mr-4">Height</div>
+                      <div class="marital-status">143 cm</div>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between mb-4">
+                    <div class="weight-container d-flex">
+                      <div class="weight-head mr-4">Weight</div>
+                      <div class="weight">70 kg</div>
+                    </div>
+                    <div class="children-status-container d-flex">
+                      <div class="children-status-head mr-4">Children</div>
+                      <div class="children-status">2</div>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <div class="weight-container d-flex">
+                      <div class="weight-head mr-4">Blood Group</div>
+                      <div class="weight">AB-</div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="tab-menu-options d-flex">
-                <a href="video-call.html"
-                  ><div class="video-call-btn mr-3">video-call</div></a
-                >
-                <a href="voice-call.html"
-                  ><div class="voice-call-btn mr-3">voice-call</div></a
-                >
-                <div class="more-btn">more-btn</div>
+              <div class="allergies p-5">
+                <div class="d-flex justify-content-between mb-4">
+                  <div class="allergies-header">Allergies</div>
+                  <svg
+                    width="24"
+                    height="24"
+                    fill="none"
+                    class="custom-btn"
+                    data-toggle="modal"
+                    data-target="#allergies-modal"
+                  >
+                    <defs />
+                    <path
+                      stroke="#2B2B2B"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
+                    />
+                  </svg>
+                </div>
+                <p class="allergies-text mb-5">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </p>
+                <p class="allergies-text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </p>
+              </div>
+              <div class="health-conditions p-5">
+                <div class="d-flex justify-content-between mb-4">
+                  <div class="health-conditions-header">
+                    Previous Health Conditions
+                  </div>
+                  <svg
+                    width="24"
+                    height="24"
+                    fill="none"
+                    class="custom-btn"
+                    data-toggle="modal"
+                    data-target="#health-conditions-modal"
+                  >
+                    <defs />
+                    <path
+                      stroke="#2B2B2B"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 20h9M17 4a2 2 0 113 3L7 19l-4 1 1-4L17 4z"
+                    />
+                  </svg>
+                </div>
+                <p class="health-conditions">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.`
+                </p>
               </div>
             </div>
-            <div class="message-tab-container">
-              <div class="message-tab p-4 justify-content-between">
-                <div class="chat-convo">
-                  <div class="recievers-chats-container w-48 mr-auto">
-                    <div class="recievers-chats br-3 p-4 mb-1">
-                      Lorem Ipsun est sit aliqua dolor
-                    </div>
-                    <div class="message-delivered-time text-right">6:20pm</div>
-                  </div>
-                  <div class="senders-chats-container w-48 ml-auto">
-                    <div class="senders-chats br-3 p-4 mb-1">
-                      Lorem Ipsun est sit aliqua dolor
-                    </div>
-                    <div class="message-delivered-time">6:20pm</div>
-                  </div>
-                </div>
+            <div class="more-option-btn d-flex align-items-center mt-5">
+              <div class="message-patient-btn custom-btn mr-5">
+                message patient
               </div>
-              <div
-                class="
-                  compose-message-container
-                  d-flex
-                  align-items-center
-                  justify-content-center
-                "
-              >
-                <div
-                  class="
-                    compose-message
-                    d-flex
-                    justify-content-between
-                    align-items-center
-                    w-80
-                  "
-                >
-                  <div class="emoji-btn">EM</div>
-                  <div class="add-attachment-btn">ATT</div>
-                  <input
-                    type="text"
-                    class="type-message border-none h-100 br-3 p-3"
-                  />
-                  <div class="send-message-btn">SND</div>
-                </div>
+              <div class="prescribe-medication-btn custom-btn">
+                prescribe medication
               </div>
             </div>
           </div>
